--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -136,13 +136,13 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item d-flex align-items-center" href="/lang/ar">
-                <span class="me-2">🇸🇦</span> العربية
+                <span class="me-2"></span> العربية
               </a></li>
               <li><a class="dropdown-item d-flex align-items-center" href="/lang/en">
-                <span class="me-2">🇺🇸</span> English
+                <span class="me-2"></span> English
               </a></li>
               <li><a class="dropdown-item d-flex align-items-center" href="/lang/fr">
-                <span class="me-2">🇫🇷</span> Français
+                <span class="me-2"></span> Français
               </a></li>
             </ul>
           </div>
